support async close and random server ports
the two headliners are mostly to make tests less slow
and less broken respectively. There are also various
logging and error reporting improvements.